[package]
name = "rusty-leveldb"
version = "0.3.0"
authors = ["Lewin Bormann <lbo@spheniscida.de>"]
description = "A compatible re-implementation of LevelDB in Rust"
homepage = "https://github.com/dermesser/leveldb-rs"
repository = "https://borgac.net/lbo/hg/"
readme = "README.md"
keywords = ["LevelDB", "key-value", "database", "SSTable", "Google"]
license = "MIT"
publish = true

[features]
default = ["mesalock_sgx"]
mesalock_sgx = ["protected_fs_rs/mesalock_sgx", "sgx_libc", "sgx_tstd", "sgx_types", "sgx_trts"]

[dependencies]
crc = { version = "2.0", git = "https://github.com/mesalock-linux/crc-rs-sgx" }
rand = { version = "0.7", git = "https://github.com/mesalock-linux/rand-sgx", tag = "v0.7.3_sgx1.1.2" }
snap = { version = "0.2", git = "https://github.com/mesalock-linux/rust-snappy-sgx"}
integer-encoding = {version = "1.0", git = "https://github.com/mesalock-linux/integer-encoding-rs-sgx"}
cfg-if = { version = "0.1.9", git = "https://github.com/mesalock-linux/cfg-if-for-sysroot" }
protected_fs_rs = {git = "https://github.com/mesalock-linux/protected_fs_rs.git", optional=true}

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_libc = { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }
sgx_types = { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }
sgx_tstd = { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }
sgx_trts = { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }

[dev-dependencies]
#time-test = "0.2"
#bencher = "0.1"

[[bench]]
name = "maps_bench"
harness = false
path = "src/benches/maps_bench.rs"

[workspace]
members = ["examples/write-a-lot", "examples/leveldb-tool"]
exclude = ["sgx"]

