[package]
name = "Helloworldsampleenclave"
version = "1.0.0"
authors = ["Baidu"]
edition = "2018"

[lib]
name = "helloworldsampleenclave"
crate-type = ["staticlib"]

[features]
default = ["mesalock_sgx"]
mesalock_sgx = []

[dependencies]
rusty-leveldb = { path = "../../../" }
rand = { version = "0.7", git = "https://github.com/mesalock-linux/rand-sgx" }

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_types = { rev = "v1.0.9", git = "https://github.com/baidu/rust-sgx-sdk.git" }
sgx_tstd = { rev = "v1.0.9", git = "https://github.com/baidu/rust-sgx-sdk.git" }
sgx_tunittest = {rev = "v1.0.9", git = "https://github.com/baidu/rust-sgx-sdk.git" }

[profile.release]
lto = false
